--- a/index Sonali.html
+++ b/index Sonali.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="C:\Users\sonal\Desktop\resume\WhatsApp Image 2023-07-08 at 2.36.16 PM (1).jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Sonali Joshi</a></h1>
-					<p>Business Analyst | Data Analyst | Financial Data Analyst | Business intelligence<br />
+					<p>Business Analyst | Data Analyst | Financial Data Analyst | Business Intelligence<br />
 					
 					One Year Of Junior Business Analyst Experience</p>
 				</header>
@@ -32,7 +32,7 @@
 
 
 </a></li>
-						<li><a href="#three">My Project work</a></li>
+						<li><a href="#three">My Project Work</a></li>
 						<li><a href="#four">Contact</a></li>
 					</ul>
 				</nav>
