--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="C:\Users\sonal\Desktop\resume\WhatsApp Image 2023-07-08 at 2.36.16 PM (1).jpeg" alt="" /></span>
+					<span class="image avatar"><img src="images/WhatsApp Image 2023-07-08 at 2.36.16 PM (1).jpeg" alt="" /></span>
 					<h1 id="logo"><a href="#">Sonali Joshi</a></h1>
 					<p>Business Analyst | Data Analyst | Financial Data Analyst | Business intelligence<br />
 					
