--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="C:\Users\sonal\Desktop\resume\1_ROA4ePogCK_3zQIRmKm21Q.webp" alt="" />
+									<img src="images\1_ROA4ePogCK_3zQIRmKm21Q.webp" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -103,21 +103,21 @@ Moreover, my commitment to staying updated on the latest tools and technologies 
 </p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="C:\Users\sonal\Desktop\resume\business-insight-for-opencart-website-email-1000x535h.webp" alt="" /></a>
+											<a href="#" class="image"><img src="images\business-insight-for-opencart-website-email-1000x535h.webp" alt="" /></a>
 											<div class="inner">
 												<h4>Sales Analytical Insights</h4>
 												<p>Welcome to our Sales Analytics Insights Report, where we delve into the comprehensive analysis of our sales performance. In this report, we aim to provide a detailed examination of key metrics, trends, and patterns that will not only illuminate our past performance but also serve as a strategic guide for future decision-making. Join us on this journey as we uncover valuable insights that will empower us to optimize sales strategies and drive continued success in our business endeavors.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="C:\Users\sonal\Desktop\resume\HR-Analytics-768x512.png" alt="" /></a>
+											<a href="#" class="image"><img src="images\HR-Analytics-768x512.png" alt="" /></a>
 											<div class="inner">
 												<h4>HR Analytical Insights</h4>
 												<p>Welcome to our HR Analytics Insights Report, a comprehensive exploration into the data-driven landscape of our human resources. In this report, we unravel key metrics and trends that illuminate the dynamics of our workforce. Our goal is to provide actionable insights that will not only enhance our understanding of HR performance but also guide strategic decisions for the future. Join us in this analysis as we uncover valuable information to shape effective HR strategies and contribute to the overall success of our organization.</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="C:\Users\sonal\Desktop\Untitled.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\Untitled.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Sales Insigts In Excel</h4>
 												<p>Welcome to our Country-Wise Sales Insights report, a comprehensive analysis encapsulating the performance of our sales across diverse geographical regions. In this report, we explore key metrics, trends, and patterns that offer valuable insights into our sales dynamics on a country-by-country basis.</p>
