--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ Moreover, my commitment to staying updated on the latest tools and technologies 
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images\Untitled.jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images\Excel_Sale.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Sales Insigts In Excel</h4>
 												<p>Welcome to our Country-Wise Sales Insights report, a comprehensive analysis encapsulating the performance of our sales across diverse geographical regions. In this report, we explore key metrics, trends, and patterns that offer valuable insights into our sales dynamics on a country-by-country basis.</p>
