--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<header class="major">
 										<h2>@Sonali Joshi</h2>
 										<p>Download CV<br />
-										<a href="Sonali Joshi Resume.pdf">Sonali Joshi Resume.pdf</a>.</p>
+										<a href="images/Sonali Joshi Resume.pdf">Sonali Joshi Resume.pdf</a>.</p>
 									</header>
 									<p>Numbers have always been my playground, from conquering Sudoku puzzles in childhood to unraveling complex mathematical problems in high school. This affinity for logic and order seamlessly led me to delve into data analysis, a journey I further enriched with an MBA in finance, achieving a noteworthy 7.3 CGPA.
 
