--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<footer>
 			<ul class="icons">
 				
-				<li><a href="https://github.com/Sonalijoshithakar" class="icon brands fa-brands fa-linkedin-in" target="_blank"><span class="label">Linkedin</span></a></li>
+				<li><a href="www.linkedin.com/in/sonali-joshi-thakar" class="icon brands fa-brands fa-linkedin-in" target="_blank"><span class="label">Linkedin</span></a></li>
 				<li><a href="https://github.com/Sonalijoshithakar" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 				<li><a href="mailto:sonalijoshithakar@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 
