--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<h2>@Sonali Joshi</h2>
 						<p>
 							Download CV<br />
-							<a href="images/Sonali Joshi Resume.pdf">Sonali Joshi Resume.pdf</a>.
+							<a href="images/Sonali Joshi Resume.pdf" target="_blank" >Sonali Joshi Resume.pdf</a>.
 						</p>
 					</header>
 					<p>
