--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 						<h2>@Sonali Joshi</h2>
 						<p>
 							Download CV<br />
-							<a href="images/Sonali Joshi Resume.pdf" target="_blank" >Sonali Joshi Resume.pdf</a>.
+							<a href="images/SonaliJoshiResume.pdf" target="_blank" >Sonali Joshi Resume.pdf</a>.
 						</p>
 					</header>
 					<p>
@@ -103,7 +103,7 @@
 					</p>
 					<div class="features">
 						<article>
-							<a href="#" class="image"><img src="images\pwc.jpeg" alt="" /></a>
+							<a href="#" class="image"><img src="images/PWC.jpeg" alt="" /></a>
 							<div class="inner">
 								<h4>Call Centre Trends for PWC Internship</h4>
 								<p>
