--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			<!-- One -->
 			<section id="one">
 				<div class="image main" data-position="center">
-					<img src="images\1_ROA4ePogCK_3zQIRmKm21Q.webp" alt="" />
+					<img src="images/Background.jpeg" alt="" />
 				</div>
 				<div class="container">
 					<header class="major">
@@ -102,6 +102,43 @@
 						Here are a few projects that I independently led for the purpose of learning.
 					</p>
 					<div class="features">
+						<article>
+							<a href="#" class="image"><img src="images/AirBnB.jpeg" alt="" /></a>
+							<div class="inner">
+								<h4>Air BnB Revenue Analysis Tableau</h4>
+								<p>
+									Key Highlights:									
+									<ul>
+										<li>Yearly Booking Trends: Visualizing the ebb and flow of bookings throughout 2019.</li>
+										<li>Pricing Analysis: Uncovering pricing patterns across different property types and locations.</li>
+										<li>Geographical Insights: Mapping the hottest Airbnb destinations of the year..</li>
+										<li>Booking Demographics: Exploring the profile of guests who chose Airbnb for their stays</li>
+									</ul>
+								</p>
+								<a href="https://github.com/Sonalijoshithakar/Air-BnB-Tableau-Project" target="_blank">View Project</a>
+							</div>
+						</article>
+
+						<article>
+							<a href="#" class="image"><img src="images/Banking.jpeg" alt="" /></a>
+							<div class="inner">
+								<h4>Financial Data Analysis Tableau</h4>
+								<p>
+									The key performance indicators in this projects invloves the following:								
+									<ul>
+										<li>Year wise loan amount Stats.</li>
+										<li>Grade and Sub-Grade wise revolving balance</li>
+										<li>Total Payment for Verified and Non-Verified Status</li>
+										<li>State wise loan status</li>
+										<li>Month wise loan status</li>
+										<li>Home ownership Vs last payment date stats</li>										
+									</ul>
+								</p>
+								<a href="https://github.com/Sonalijoshithakar/Financial-Data-Analysis-Tableau-Project" target="_blank">View Project</a>
+							</div>
+						</article>
+
+
 						<article>
 							<a href="#" class="image"><img src="images/PWC.jpeg" alt="" /></a>
 							<div class="inner">
