--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 				<div class="image main" data-position="center">
 					<img src="images/Background.jpeg" alt="" />
 				</div>
-				<div class="container">
+				<div class="container" style="padding:0px !important">
 					<header class="major">
 						<h2>@Sonali Joshi</h2>
 						<p>
 							Download CV<br />
-							<a href="images/SonaliJoshiResume.pdf" target="_blank" >Sonali Joshi Resume.pdf</a>.
+							<a href="images/Sonali_Joshi_Financial_Analyst.pdf" target="_blank" >Sonali Joshi Resume.pdf</a>.
 						</p>
 					</header>
 					<p>
