--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p>
 				Business Analyst | Data Analyst | Financial Data Analyst | Business intelligence<br />
 
-				One Year Of Junior Business Analyst Experience
+				A proficient analyst with expertise in Financial data and Business analysis.	
 			</p>
 		</header>
 		<nav id="nav">
